2005-09-10  Choe Hwanjin <choe.hwanjin@gmail.com>
	* gtkimcontexthangul.c: 사용하지 않는 DeskopInfo 스트럭쳐 선언 제거
	* imhangul.conf: 빠진 설명 보충
	* test.sh: IM_HANGUL_CONF_FILE 환경 변수 사용

2005-09-08  Choe Hwanjin <choe.hwanjin@gmail.com>
	* gtkimcontexthangul.c: 더이상 gtkrc를 설정파일로 사용하지 않고
	  $HOME/.imhangul.conf 파일을 로딩하는 루틴을 만들어 넣음
	  새로운 설정파일에 맞게 preedit style을 처리하는 루틴을 개선
	* imhangul.conf: 새로운 설정 파일 예시 추가

2005-09-06  Choe Hwanjin <choe.hwanjin@gmail.com>
	* imhangul.spec.in: License 항목 추가, mo 파일 목록에 추가.
	  SungHyun Nam 님에게 감사드립니다.

2005-08-31  Choe Hwanjin <choe.hwanjin@gmail.com>
	* gtkimcontexthangul.c(im_hangul_get_preedit_string):
	  여기서 리턴하는 cursor_pos 값은 byte단위가 아니라 character 단위이므로
	  cursor_pos에 g_utf8_strlen()을 이용해서 대입함

2005-07-30  Choe Hwanjin <choe.hwanjin@gmail.com>
	* im_hangul_ic_finalize 함수에서 toplevel 데이터 정리
	* Release 0.9.12

2005-07-17  Choe Hwanjin <choe.hwanjin@gmail.com>
	* imhangul.c, gtkimcontext.{h,c}: GtkIMContextHangul을 인자로 받는
	  함수는 모두 im_hangul_ic prefix를 붙임, 그외의 함수는 im_hangul을
	  prefix로 사용함
	* imhangul.{h,c}, gtkimcontext.{h,c}: GtkKeySnooperFunc을 등록하여 그
	  안에서 먼저 filter_keypress 함수를 실행
	  Slave를 도입하여 simple immodule을 slave로 생성하고 실제
	  filter_keypress 함수에서는 slave의 filter 함수를 호출

2004-08-26  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: candidate window에서 한페이지에 9개 표시

2004-08-20  Choe Hwanjin <krisna@kldp.org>
	* candidatetable.h: 심벌들의 순서를 윈도우즈와 동일하게 바꿈

2004-08-11  Choe Hwanjin <krisna@kldp.org>
	* Release 0.9.11

2004-08-09  Choe Hwanjin <krisna@kldp.org>
	* #300388 문제 해결

2004-07-21  Choe Hwanjin <krisna@kldp.org>
	* gtk_im_context_get_surrounding에서 널 포인터 체크
	* candidate 창에서 mouse wheel event 처리

2004-07-19  Choe Hwanjin <krisna@kldp.org>
	* 한자 선택창이 뜨면 마우스와 키보드를 grab 함

2004-07-18  Choe Hwanjin <krisna@kldp.org>
	* string commit하기 전에 preedit_changed 시그널을 발생시킴
	  evolution 1.5에서 편지 편집창에서 생기던 문제 해결(#300276 참고)

2004-07-12  Choe Hwanjin <krisna@kldp.org>
	* configure 할때 sysconfdir을 따로 지정하지 않아도 알아서 찾도록 함
