@@ -11,6 +11,9 @@ enable_capslock = true
 # 상태창을 보이게/안보이게 설정 합니다.
 enable_status_window = true
 
+# dvorak 자판을 사용할 경우 true로 설정합니다.
+enable_dvorak = false
+
 # preedit string의 모양을 설정합니다.
 # preedit string은 조합중인 글자를 말합니다.
 # 사용 가능한 값은 아래와 같습니다.
