@@ -1,3 +1,7 @@
+2005-09-11  Choe Hwanjin <choe.hwanjin@gmail.com>
+	* gtkimcontexthangul.c: dvorak 사용 옵션 추가
+	* imhangul.conf: dvorak 옵션 예시 추가
+
 2005-09-10  Choe Hwanjin <choe.hwanjin@gmail.com>
 	* gtkimcontexthangul.c: 사용하지 않는 DeskopInfo 스트럭쳐 선언 제거
 	* imhangul.conf: 빠진 설명 보충
